@@ -1,6 +1,8 @@
 ## This is a -*- Makefile -*-
 ## Process this file with automake to create Makefile.in
 
+noinst_SUBDIRS = hints
+
 EXTRA_DIST = README.test_options test_options
 
 ## The files in the purify subdir are NOT distributed, due to controversy over
