@@ -1,2 +1,9 @@
-hints_test.o
+Makefile
+Makefile.in
+.deps
+bb.out
+outfile
+TAGS
+.gdb_history
+gmon.out
 hints_test
