@@ -1,13 +1,494 @@
+# Makefile.in generated by automake 1.7 from Makefile.am.
+# tests/hints/Makefile.  Generated from Makefile.in by configure.
+
+# Copyright 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002
+# Free Software Foundation, Inc.
+# This Makefile.in is free software; the Free Software Foundation
+# gives unlimited permission to copy and/or distribute it,
+# with or without modifications, as long as this notice is preserved.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY, to the extent permitted by law; without
+# even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+# PARTICULAR PURPOSE.
+
+
+
 # This is not portable, nevermind.
 
-all: hints_test
+srcdir = .
+top_srcdir = ../..
 
-clean:
-	rm -f core hints_test.o hints_test
+pkgdatadir = $(datadir)/fvwm
+pkglibdir = $(libdir)/fvwm
+pkgincludedir = $(includedir)/fvwm
+top_builddir = ../..
 
-hints_test.o: hints_test.c
-	gcc -g -O2 -Wall -I/usr/X11R6/include -L/usr/X11R6/lib -c hints_test.c
+am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
+INSTALL = /usr/bin/install -c
+install_sh_DATA = $(install_sh) -c -m 644
+install_sh_PROGRAM = $(install_sh) -c
+install_sh_SCRIPT = $(install_sh) -c
+INSTALL_HEADER = $(INSTALL_DATA)
+transform = $(program_transform_name)
+NORMAL_INSTALL = :
+PRE_INSTALL = :
+POST_INSTALL = :
+NORMAL_UNINSTALL = :
+PRE_UNINSTALL = :
+POST_UNINSTALL = :
+host_triplet = i686-pc-linux-gnu
+ACLOCAL = ${SHELL} /home/luthien/src/fvwm/missing --run aclocal-1.7
+ALLOCA = 
+ALL_DOMAINS = fvwm FvwmTaskBar
+ALL_LINGUAS = ar fr
+AMDEP_FALSE = #
+AMDEP_TRUE = 
+AMTAR = ${SHELL} /home/luthien/src/fvwm/missing --run tar
+AUTOCONF = ${SHELL} /home/luthien/src/fvwm/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/luthien/src/fvwm/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/luthien/src/fvwm/missing --run automake-1.7
+AWK = gawk
+Bidi_CFLAGS = -I/usr/include
+Bidi_LIBS = -L/usr/lib -lfribidi
+CATALOGS =  ar.gmo fr.gmo
+CATOBJEXT = .gmo
+CC = gcc
+CCDEPMODE = depmode=gcc
+CFLAGS = -g -O2 -Wall -Wno-implicit-int
+CPP = gcc -E
+CPPFLAGS = 
+CYGPATH_W = echo
+DEFS = -DHAVE_CONFIG_H
+DEPDIR = .deps
+DUMMYPOFILES =  fvwm.ar.nop FvwmTaskBar.ar.nop fvwm.fr.nop FvwmTaskBar.fr.nop
+ECHO_C = 
+ECHO_N = -n
+ECHO_T = 
+EGREP = grep -E
+EXEEXT = 
+FC_CFLAGS = 
+FC_CONFIG = no
+FC_LIBS = 
+FRIBIDI_CONFIG = /usr/bin/fribidi-config
+FT2_CFLAGS = -I/usr/include/freetype2
+FT2_CONFIG = /usr/bin/freetype-config
+FT2_LIBS = -lfreetype
+FVWMALTFTP = metalab.unc.edu
+FVWMALTFTPDIR = /pub/Linux/X11/window-managers/
+FVWMFTP = ftp.fvwm.org
+FVWMFTPDIR = /pub/ftp
+FVWMGTK = FvwmGtk
+FVWMHOMEPAGE = http://fvwm.org/
+FVWMLIST = fvwm@fvwm.org
+FVWMNAMELONG = F? Virtual Window Manager
+FVWMNAMEUCASE = FVWM
+FVWMTASKBAR_DOMAIN = FvwmTaskBar
+FVWMWORKERSLIST = fvwm-workers@fvwm.org
+FVWMWORKERSLISTLONG = fvwm workers list <fvwm-workers@fvwm.org>
+FVWM_CONFDIR = ${sysconfdir}
+FVWM_CPP = /usr/bin/cpp
+FVWM_DATADIR = ${datadir}/fvwm
+FVWM_DOMAIN = fvwm
+FVWM_IMAGEPATH = /usr/include/X11/bitmaps:/usr/include/X11/pixmaps
+FVWM_MODULEDIR = ${libexecdir}/fvwm/2.5.6
+FVWM_PERLLIB = perllib
+FVWM_PERLLIBDIR = ${datadir}/fvwm/perllib
+GDK_IMLIB_CFLAGS = -I/usr/include/gtk-1.2 -I/usr/include/glib-1.2 -I/usr/lib/glib/include -I/usr/X11R6/include -I/usr/X11R6/include
+GDK_IMLIB_LIBS = -L/usr/lib -lgdk_imlib -ljpeg -ltiff -lungif -lpng -lz -lm -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm
+GMOFILES =  fvwm.ar.gmo FvwmTaskBar.ar.gmo fvwm.fr.gmo FvwmTaskBar.fr.gmo
+GMSGFMT = /usr/bin/msgfmt
+GNOMEUI_LIBS = -rdynamic -lgnomeui -lart_lgpl -lgdk_imlib -lSM -lICE -lgtk -lgdk -lgmodule -ldl -lXi -lXext -lX11 -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib
+GNOME_CONFIG = /usr/bin/gnome-config
+GNOME_INCLUDEDIR = -I/usr/include/gnome-1.0 -DNEED_GNOMESUPPORT_H -I/usr/lib/gnome-libs/include -I/usr/include/glib-1.2 -I/usr/lib/glib/include -I/usr/include/orbit-1.0 -I/usr/include/gtk-1.2 -I/usr/X11R6/include
+GNOME_LIBDIR = -rdynamic -L/usr/lib -L/usr/X11R6/lib
+GNOME_LIBS = -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib
+GTK_CFLAGS = -I/usr/include/gtk-1.2 -I/usr/include/glib-1.2 -I/usr/lib/glib/include -I/usr/X11R6/include
+GTK_CONFIG = /usr/bin/gtk-config
+GTK_LIBS = -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm
+IMLIBCONF = /usr/bin/imlib-config
+INSTALL_DATA = ${INSTALL} -m 644
+INSTALL_PROGRAM = ${INSTALL}
+INSTALL_SCRIPT = ${INSTALL}
+INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
+INST_LINGUAS =  ar fr
+ISRELEASED = no
+LDFLAGS = 
+LIBS = 
+LN_S = ln -s
+LOCALEDIR = ${datadir}/locale
+LOCAL_BUGADDR = luthien
+LTLIBOBJS = 
+MAKEINFO = ${SHELL} /home/luthien/src/fvwm/missing --run makeinfo
+MANPAGE_PREAMBLE = .\" WARNING: This file was automatically generated.  Edit the .in file instead.
+MKINSTALLDIRS = ./mkinstalldirs
+MSGFMT = /usr/bin/msgfmt
+MSGMERGE = :
+MSGUNIQ = 
+OBJEXT = o
+PACKAGE = fvwm
+PACKAGE_BUGREPORT = 
+PACKAGE_NAME = 
+PACKAGE_STRING = 
+PACKAGE_TARNAME = 
+PACKAGE_VERSION = 
+PATH_SEPARATOR = :
+PERL = /usr/bin/perl
+POFILES =  fvwm.ar.po FvwmTaskBar.ar.po fvwm.fr.po FvwmTaskBar.fr.po
+POSUB = po
+RANLIB = ranlib
+RELDATELONG = (not released yet)
+RELDATENUM = (not released yet)
+RELDATESHORT = (not released yet)
+SET_MAKE = 
+SHELL = /bin/sh
+STRIP = 
+UPDATEPOFILES =  fvwm.ar.po-update FvwmTaskBar.ar.po-update fvwm.fr.po-update FvwmTaskBar.fr.po-update
+USE_NLS = yes
+VERSION = 2.5.6
+VERSIONINFO =  (from cvs)
+XFT_CFLAGS = 
+XFT_CONFIG = 
+XFT_LIBS = 
+XGETTEXT = :
+X_CFLAGS =  -I/usr/X11R6/include
+X_EXTRA_LIBS = 
+X_LIBS =  -L/usr/X11R6/lib
+X_PRE_LIBS =  -lSM -lICE
+Xft_CFLAGS =  -I/usr/include/freetype2
+Xft_LIBS = -lXft -lfreetype
+Xinerama_CFLAGS = 
+Xinerama_LIBS = -lXinerama
+Xrender_CFLAGS = 
+Xrender_LIBS = -lXrender
+ac_ct_CC = gcc
+ac_ct_RANLIB = ranlib
+ac_ct_STRIP = 
+am__fastdepCC_FALSE = 
+am__fastdepCC_TRUE = #
+am__include = include
+am__quote = 
+bindir = ${exec_prefix}/bin
+build = i686-pc-linux-gnu
+build_alias = 
+build_cpu = i686
+build_os = linux-gnu
+build_vendor = pc
+datadir = ${prefix}/share
+exec_prefix = ${prefix}
+host = i686-pc-linux-gnu
+host_alias = 
+host_cpu = i686
+host_os = linux-gnu
+host_vendor = pc
+iconv_CFLAGS = 
+iconv_LIBS = 
+includedir = ${prefix}/include
+infodir = ${prefix}/info
+install_sh = /home/luthien/src/fvwm/install-sh
+intl_CFLAGS = 
+intl_LIBS = 
+libdir = ${exec_prefix}/lib
+libexecdir = ${exec_prefix}/libexec
+localstatedir = ${prefix}/var
+mandir = ${prefix}/man
+oldincludedir = /usr/include
+png_CFLAGS = 
+png_LIBS = -lpng -lz
+prefix = /usr/local
+program_transform_name = s,x,x,
+readline_CFLAGS = 
+readline_LIBS = -lreadline -ltermcap
+rplay_CFLAGS = 
+rplay_LIBS = -lrplay
+sbindir = ${exec_prefix}/sbin
+sharedstatedir = ${prefix}/com
+stroke_CFLAGS = 
+stroke_LIBS = -lstroke
+sysconfdir = ${prefix}/etc
+target_alias = 
+with_bidi = yes
+with_gdkimlib = yes
+with_gettext = yes
+with_gnomelibs = yes
+with_gtk = yes
+with_perllib = yes
+with_png = yes
+with_readline = yes
+with_rplay = yes
+with_shape = yes
+with_shm = yes
+with_sm = yes
+with_stroke = yes
+with_xft = yes
+with_xinerama = yes
+with_xpm = yes
+with_xrender = yes
+xpm_CFLAGS = 
+xpm_LIBS = -lXpm
 
-hints_test: hints_test.o
-	gcc -g -O2 -Wall -o hints_test hints_test.o -I/usr/X11R6/include -L/usr/X11R6/lib -L../../libs/ -lX11 -lfvwm
+noinst_PROGRAMS = hints_test
 
+hints_test_SOURCES = hints_test.c
+
+LDADD = -L$(top_builddir)/libs -lfvwm $(X_LIBS) -lX11
+
+INCLUDES = $(X_CFLAGS)
+subdir = tests/hints
+mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
+CONFIG_HEADER = $(top_builddir)/config.h
+CONFIG_CLEAN_FILES =
+noinst_PROGRAMS = hints_test$(EXEEXT)
+PROGRAMS = $(noinst_PROGRAMS)
+
+am_hints_test_OBJECTS = hints_test.$(OBJEXT)
+hints_test_OBJECTS = $(am_hints_test_OBJECTS)
+hints_test_LDADD = $(LDADD)
+hints_test_DEPENDENCIES =
+hints_test_LDFLAGS =
+
+DEFAULT_INCLUDES =  -I. -I$(srcdir) -I$(top_builddir)
+depcomp = $(SHELL) $(top_srcdir)/depcomp
+am__depfiles_maybe = depfiles
+DEP_FILES = ./$(DEPDIR)/hints_test.Po
+COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
+	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
+CCLD = $(CC)
+LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
+DIST_SOURCES = $(hints_test_SOURCES)
+DIST_COMMON = README Makefile.am Makefile.in
+SOURCES = $(hints_test_SOURCES)
+
+all: all-am
+
+.SUFFIXES:
+.SUFFIXES: .c .o .obj
+$(srcdir)/Makefile.in:  Makefile.am  $(top_srcdir)/configure.in $(ACLOCAL_M4)
+	cd $(top_srcdir) && \
+	  $(AUTOMAKE) --gnu  tests/hints/Makefile
+Makefile:  $(srcdir)/Makefile.in  $(top_builddir)/config.status
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)
+
+clean-noinstPROGRAMS:
+	-test -z "$(noinst_PROGRAMS)" || rm -f $(noinst_PROGRAMS)
+hints_test$(EXEEXT): $(hints_test_OBJECTS) $(hints_test_DEPENDENCIES) 
+	@rm -f hints_test$(EXEEXT)
+	$(LINK) $(hints_test_LDFLAGS) $(hints_test_OBJECTS) $(hints_test_LDADD) $(LIBS)
+
+mostlyclean-compile:
+	-rm -f *.$(OBJEXT) core *.core
+
+distclean-compile:
+	-rm -f *.tab.c
+
+include ./$(DEPDIR)/hints_test.Po
+
+distclean-depend:
+	-rm -rf ./$(DEPDIR)
+
+.c.o:
+#	if $(COMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" \
+#	  -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<; \
+#	then mv "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; \
+#	else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; \
+#	fi
+	source='$<' object='$@' libtool=no \
+	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' \
+	$(CCDEPMODE) $(depcomp) \
+	$(COMPILE) -c `test -f '$<' || echo '$(srcdir)/'`$<
+
+.c.obj:
+#	if $(COMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" \
+#	  -c -o $@ `if test -f '$<'; then $(CYGPATH_W) '$<'; else $(CYGPATH_W) '$(srcdir)/$<'`; \
+#	then mv "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; \
+#	else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; \
+#	fi
+	source='$<' object='$@' libtool=no \
+	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' \
+	$(CCDEPMODE) $(depcomp) \
+	$(COMPILE) -c `if test -f '$<'; then $(CYGPATH_W) '$<'; else $(CYGPATH_W) '$(srcdir)/$<'`
+uninstall-info-am:
+
+ETAGS = etags
+ETAGSFLAGS =
+
+CTAGS = ctags
+CTAGSFLAGS =
+
+tags: TAGS
+
+ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
+	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
+	unique=`for i in $$list; do \
+	    if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
+	  done | \
+	  $(AWK) '    { files[$$0] = 1; } \
+	       END { for (i in files) print i; }'`; \
+	mkid -fID $$unique
+
+TAGS:  $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
+		$(TAGS_FILES) $(LISP)
+	tags=; \
+	here=`pwd`; \
+	list='$(SOURCES) $(HEADERS)  $(LISP) $(TAGS_FILES)'; \
+	unique=`for i in $$list; do \
+	    if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
+	  done | \
+	  $(AWK) '    { files[$$0] = 1; } \
+	       END { for (i in files) print i; }'`; \
+	test -z "$(ETAGS_ARGS)$$tags$$unique" \
+	  || $(ETAGS) $(ETAGSFLAGS) $(AM_ETAGSFLAGS) $(ETAGS_ARGS) \
+	     $$tags $$unique
+
+ctags: CTAGS
+CTAGS:  $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
+		$(TAGS_FILES) $(LISP)
+	tags=; \
+	here=`pwd`; \
+	list='$(SOURCES) $(HEADERS)  $(LISP) $(TAGS_FILES)'; \
+	unique=`for i in $$list; do \
+	    if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
+	  done | \
+	  $(AWK) '    { files[$$0] = 1; } \
+	       END { for (i in files) print i; }'`; \
+	test -z "$(CTAGS_ARGS)$$tags$$unique" \
+	  || $(CTAGS) $(CTAGSFLAGS) $(AM_CTAGSFLAGS) $(CTAGS_ARGS) \
+	     $$tags $$unique
+
+GTAGS:
+	here=`$(am__cd) $(top_builddir) && pwd` \
+	  && cd $(top_srcdir) \
+	  && gtags -i $(GTAGS_ARGS) $$here
+
+distclean-tags:
+	-rm -f TAGS ID GTAGS GRTAGS GSYMS GPATH tags
+DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
+
+top_distdir = ../..
+distdir = $(top_distdir)/$(PACKAGE)-$(VERSION)
+
+distdir: $(DISTFILES)
+	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
+	list='$(DISTFILES)'; for file in $$list; do \
+	  case $$file in \
+	    $(srcdir)/*) file=`echo "$$file" | sed "s|^$$srcdirstrip/||"`;; \
+	  esac; \
+	  if test -f $$file || test -d $$file; then d=.; else d=$(srcdir); fi; \
+	  dir=`echo "$$file" | sed -e 's,/[^/]*$$,,'`; \
+	  if test "$$dir" != "$$file" && test "$$dir" != "."; then \
+	    dir="/$$dir"; \
+	    $(mkinstalldirs) "$(distdir)$$dir"; \
+	  else \
+	    dir=''; \
+	  fi; \
+	  if test -d $$d/$$file; then \
+	    if test -d $(srcdir)/$$file && test $$d != $(srcdir); then \
+	      cp -pR $(srcdir)/$$file $(distdir)$$dir || exit 1; \
+	    fi; \
+	    cp -pR $$d/$$file $(distdir)$$dir || exit 1; \
+	  else \
+	    test -f $(distdir)/$$file \
+	    || cp -p $$d/$$file $(distdir)/$$file \
+	    || exit 1; \
+	  fi; \
+	done
+check-am: all-am
+check: check-am
+all-am: Makefile $(PROGRAMS)
+
+installdirs:
+
+install: install-am
+install-exec: install-exec-am
+install-data: install-data-am
+uninstall: uninstall-am
+
+install-am: all-am
+	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
+
+installcheck: installcheck-am
+install-strip:
+	$(MAKE) $(AM_MAKEFLAGS) INSTALL_PROGRAM="$(INSTALL_STRIP_PROGRAM)" \
+	  INSTALL_STRIP_FLAG=-s \
+	  `test -z '$(STRIP)' || \
+	    echo "INSTALL_PROGRAM_ENV=STRIPPROG='$(STRIP)'"` install
+mostlyclean-generic:
+
+clean-generic:
+
+distclean-generic:
+	-rm -f Makefile $(CONFIG_CLEAN_FILES)
+
+maintainer-clean-generic:
+	@echo "This command is intended for maintainers to use"
+	@echo "it deletes files that may require special tools to rebuild."
+clean: clean-am
+
+clean-am: clean-generic clean-noinstPROGRAMS mostlyclean-am
+
+distclean: distclean-am
+
+distclean-am: clean-am distclean-compile distclean-depend \
+	distclean-generic distclean-tags
+
+dvi: dvi-am
+
+dvi-am:
+
+info: info-am
+
+info-am:
+
+install-data-am:
+
+install-exec-am:
+
+install-info: install-info-am
+
+install-man:
+
+installcheck-am:
+
+maintainer-clean: maintainer-clean-am
+
+maintainer-clean-am: distclean-am maintainer-clean-generic
+
+mostlyclean: mostlyclean-am
+
+mostlyclean-am: mostlyclean-compile mostlyclean-generic
+
+pdf: pdf-am
+
+pdf-am:
+
+ps: ps-am
+
+ps-am:
+
+uninstall-am: uninstall-info-am
+
+.PHONY: CTAGS GTAGS all all-am check check-am clean clean-generic \
+	clean-noinstPROGRAMS ctags distclean distclean-compile \
+	distclean-depend distclean-generic distclean-tags distdir dvi \
+	dvi-am info info-am install install-am install-data \
+	install-data-am install-exec install-exec-am install-info \
+	install-info-am install-man install-strip installcheck \
+	installcheck-am installdirs maintainer-clean \
+	maintainer-clean-generic mostlyclean mostlyclean-compile \
+	mostlyclean-generic pdf pdf-am ps ps-am tags uninstall \
+	uninstall-am uninstall-info-am
+
+
+#all: hints_test
+#
+#clean:
+#	rm -f core hints_test.o hints_test
+
+#hints_test.o: hints_test.c
+#	gcc -g -O2 -Wall -I/usr/X11R6/include -L/usr/X11R6/lib -c hints_test.c
+#
+#hints_test: hints_test.o
+#gcc -g -O2 -Wall -o hints_test hints_test.o -I/usr/X11R6/include -L/usr/X11R6/lib -L../../libs/ -lX11 -lfvwm
+# Tell versions [3.59,3.63) of GNU make to not export all variables.
+# Otherwise a system limit (for SysV at least) may be exceeded.
+.NOEXPORT:
