@@ -1,3 +1,10 @@
+2003-01-26  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* Makefile.am:
+	* hints/Makefile:
+	* hints/Makefile.am:
+	replaced Makefile with Makefile.am
+
 2003-01-18  Marcus Lundblad  <ml@update.uu.se>
 
 	* hints/Makefile:
